Updated display and README

--- a/.env.example
+++ b/.env.example
@@ -42,5 +42,8 @@ CHUNK_SIZE=512
 CHUNK_OVERLAP=50
 TOP_K_RESULTS=10
 
+# Celery Worker Settings
+CELERY_CONCURRENCY=4
+
 # Frontend (for Next.js)
 NEXT_PUBLIC_API_URL=http://localhost:8000
