--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,11 @@ services:
       - backend
     networks:
       - gitlab-chat-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   backend:
     build:
@@ -66,6 +71,11 @@ services:
         condition: service_healthy
     networks:
       - gitlab-chat-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   celery_worker:
     build:
@@ -113,6 +123,11 @@ services:
         condition: service_healthy
     networks:
       - gitlab-chat-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Local embedding service (optional - enable by setting EMBEDDING_PROVIDER=local)
   t2v-transformers:
@@ -124,6 +139,11 @@ services:
     restart: unless-stopped
     networks:
       - gitlab-chat-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   postgres:
     image: postgres:16-alpine
@@ -140,6 +160,11 @@ services:
       retries: 5
     networks:
       - gitlab-chat-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   qdrant:
     image: qdrant/qdrant:latest
@@ -152,6 +177,11 @@ services:
       retries: 5
     networks:
       - gitlab-chat-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   redis:
     image: redis:7-alpine
@@ -164,6 +194,11 @@ services:
       retries: 5
     networks:
       - gitlab-chat-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
   postgres_data:
