Added model selection

--- a/.env.example
+++ b/.env.example
@@ -2,26 +2,37 @@
 GITLAB_URL=https://gitlab.example.com
 GITLAB_PAT=glpat-xxxxxxxxxxxxxxxxxxxx
 
+# =============================================================================
 # LLM Configuration (for chat/inference)
-OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxx
-OPENAI_MODEL=gpt-4o
-# OpenAI Embeddings (when EMBEDDING_PROVIDER=openai)
-OPENAI_EMBEDDING_MODEL=text-embedding-3-small
-# Optional: Use OpenAI-compatible API (e.g., local LLM server)
-# OPENAI_BASE_URL=http://localhost:11434/v1
+# =============================================================================
+# LLM providers are configured via the UI (Settings > LLM Providers).
+# No env vars needed - add your OpenAI/Anthropic/custom providers in the app.
 
+# =============================================================================
 # Embedding Configuration
+# =============================================================================
 # Provider: "openai" or "local"
-EMBEDDING_PROVIDER=openai
+EMBEDDING_PROVIDER=local
+
+# OpenAI Embeddings (when EMBEDDING_PROVIDER=openai)
+OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxx
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
 # Local Embeddings (when EMBEDDING_PROVIDER=local)
-# Uses sentence-transformers via t2v-transformers container
+# Uses sentence-transformers via embedding-server container
 # To enable: docker compose --profile local-embeddings up -d
-LOCAL_EMBEDDING_URL=http://t2v-transformers:8080
-LOCAL_EMBEDDING_DIMENSION=384
+# See EMBEDDING_MODELS.md for available models and recommendations
+LOCAL_EMBEDDING_URL=http://embedding-server:8080
+LOCAL_EMBEDDING_DIMENSION=768
 
-# Enable CUDA for local embeddings (if GPU available)
-ENABLE_CUDA=0
+# Local embedding model (image tag from Weaviate t2v-transformers)
+# Options: baai-bge-base-en-v1.5 (recommended), sentence-transformers-all-MiniLM-L6-v2,
+#          sentence-transformers-all-mpnet-base-v2, baai-bge-small-en-v1.5
+# Note: Update LOCAL_EMBEDDING_DIMENSION when changing models (384 for MiniLM/small, 768 for base)
+LOCAL_EMBEDDING_MODEL=baai-bge-base-en-v1.5
+
+# Enable CUDA for local embeddings (1=enabled, 0=disabled)
+LOCAL_EMBEDDING_ENABLE_CUDA=0
 
 # Database Configuration
 POSTGRES_HOST=postgres
