Added production configuration and models selection

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,14 @@ GITLAB_URL=https://gitlab.example.com
 GITLAB_PAT=glpat-xxxxxxxxxxxxxxxxxxxx
 
 # =============================================================================
+# Authentication (optional)
+# =============================================================================
+# Set these to enable basic auth on the nginx proxy (both dev and prod)
+# Leave empty to disable authentication
+AUTH_USERNAME=
+AUTH_PASSWORD=
+
+# =============================================================================
 # LLM Configuration (for chat/inference)
 # =============================================================================
 # LLM providers are configured via the UI (Settings > LLM Providers).
@@ -55,6 +63,3 @@ TOP_K_RESULTS=10
 
 # Celery Worker Settings
 CELERY_CONCURRENCY=4
-
-# Frontend (for Next.js)
-NEXT_PUBLIC_API_URL=http://localhost:8000
