--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -49,8 +49,9 @@ FROM node:20-alpine AS production
 
 WORKDIR /app
 
-# Create non-root user
-RUN addgroup --system --gid 1001 nodejs \
+# Install wget for healthcheck and create non-root user
+RUN apk add --no-cache wget \
+    && addgroup --system --gid 1001 nodejs \
     && adduser --system --uid 1001 nextjs
 
 # Set environment variables
