Added app port as envvar

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 GITLAB_URL=https://gitlab.example.com
 GITLAB_PAT=glpat-xxxxxxxxxxxxxxxxxxxx
 
+# Application Port (exposed by nginx)
+APP_PORT=3000
+
 # =============================================================================
 # Authentication (optional)
 # =============================================================================
