--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     ports:
-      - "3000:80"
+      - "${APP_PORT:-3000}:80"
     environment:
       - AUTH_USERNAME=${AUTH_USERNAME:-}
       - AUTH_PASSWORD=${AUTH_PASSWORD:-}
