Add periodic sync, mobile UI, and sync error handling

--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,6 @@ TOP_K_RESULTS=10
 
 # Celery Worker Settings
 CELERY_CONCURRENCY=4
+
+# Sync frequency in seconds (how often to resync indexed projects)
+SYNC_FREQUENCY=60
